--- a/GestionChampionnat/src/main/resources/application.properties
+++ b/GestionChampionnat/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=GestionChampionnat
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_championnat_spring?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=8090
